Commit11 NOK: Optimized and refined the Code for Location ID setting